# create-cpp-project

./: .clang-format  .clang-tidy  .editorconfig  .gitignore  AGENTS.md  BUILD_SYSTEM.md  BUILD_VALIDATION_REPORT.md  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  CMakePresetsAdvanced.json  CONTRIBUTORS.md  Doxyfile  ENHANCED_TERMINAL_DEMO_README.md  README.md  REORGANIZATION_MAPPING.md  SECURITY.md  WARP.md  build.bat  codecov.yml  dependencies.json  enhanced_demo_CMakeLists.txt  enhanced_terminal_demo.cpp  final_utf8_validation.cpp  final_verification.ps1  fix_all_includes.ps1  fix_critical_includes.ps1  fix_utf8_encoding.ps1  mkdocs.yml  quick_test.ps1  requirements.txt  simple_utf8_test.cpp  test_all_combinations.ps1  update_includes.ps1  utf8_encoding_test.cpp  utf8_test_verification.cpp  xmake.lua
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  codeql.yml  debug-tools.yml  dependency-updates.yml  docker-builds.yml  integration.yml  monitoring.yml  multi-arch.yml  performance.yml  release.yml  security.yml
TestApp/: .gitignore  CMakeLists.txt  LICENSE  README.md  vcpkg.json
TestApp/src/: main.cpp
TestProject/: .gitignore  CMakeLists.txt  README.md  vcpkg.json
TestProject/src/: main.cpp
cmake/: Config.cmake.in  FindFilesystem.cmake
cmake/modules/: BuildOptimizations.cmake  BuildTypes.cmake  CompilerSettings.cmake  ContainerUtils.cmake  CrossCompilationWorkflows.cmake  Dependencies.cmake  DevTools.cmake  EmbeddedSupport.cmake  MobileSupport.cmake  PackageManager.cmake  PackageTesting.cmake  Packaging.cmake  PlatformSupport.cmake  PlatformTesting.cmake  PresetUtils.cmake  ProjectUtils.cmake  Testing.cmake  TestingEnhanced.cmake  UtilityFunctions.cmake  WebAssemblySupport.cmake
cmake/presets/: base-presets.json  container-presets.json  optimization-presets.json  platform-presets.json
cmake/scripts/: create_appimage.cmake  validate-presets.cmake
cmake/toolchains/: android.cmake  arm-none-eabi.cmake  (+2 more)
docker/: alpine-minimal.Dockerfile  ci-builder.Dockerfile  docker-compose.yml  ubuntu-dev.Dockerfile
docs/: BUILD_SYSTEM.md  CONTAINERS.md  MSYS2_INTEGRATION.md  MSYS2_INTEGRATION_COMPLETE.md  MSYS2_QUICK_REFERENCE.md  MSYS2_TESTING_SUMMARY.md  README-documents-backup.md  cpp-scaffold.1  index.md
documents/: README.md
examples/: README.md  remote_source_demo.cpp  test_all_examples.sh
examples/qt-image-viewer/: CMakeLists.txt  README.md
examples/qt-image-viewer/src/: main.cpp
final-test-project/: .gitignore  CMakeLists.txt  README.md  vcpkg.json
resources/: Info.plist  README.md  cpp-scaffold.desktop.in  dmg_setup.scpt  entitlements.plist
scripts/: build.ps1  build.sh  install.ps1  install.sh  manage-containers.sh  setup_signing.ps1  setup_signing.sh  test_all_msys2_templates.sh  test_msys2_integration.sh  test_package_manager_integration.sh  test_packages.ps1  test_packages.sh  validate_pkgbuild.sh  web-install.sh
src/: main.cpp
test-embedded/: README.md
test-final-validation/: .gitattributes  .gitignore  CMakeLists.txt  README.md  vcpkg.json
test-gameengine-fixed/: .gitignore  README.md  premake5.lua  vcpkg.json
test-invalid/: .gitignore  README.md  vcpkg.json  xmake.lua
test-meson-gui/: .gitignore  README.md  meson.build  vcpkg.json
test-meson-project/: .gitignore  README.md  meson.build  vcpkg.json
test-meson-project/include/test-meson-project/: application.h  logging.h  main_window.h
test-meson-project/src/: application.cpp  logging.cpp  main.cpp  main_window.cpp
test-meson-project/tests/: test_main.cpp
test-meson-project/ui/: main_window.ui
test-premake-lib/: .clang-format  .clang-tidy  .gitignore  Doxyfile  README.md  install.sh  mkdocs.yml  premake5.lua  vcpkg.json
test-premake-project/: .gitignore  Doxyfile  README.md  install.sh  mkdocs.yml  premake5.lua  vcpkg.json
test-utf8-project/: .gitignore  CMakeLists.txt  README.md  vcpkg.json
test-validation/: .gitignore  CMakeLists.txt  README.md  vcpkg.json
test-xmake-console/: .gitignore  README.md  vcpkg.json  xmake.lua
test-xmake-modules/: .gitignore  README.md  vcpkg.json  xmake.lua
test-xmake-project/: .gitignore  README.md  vcpkg.json  xmake.lua
test_validation/: .gitignore  CMakeLists.txt  README.md  vcpkg.json
test_validation2/: .gitignore  CMakeLists.txt  README.md  vcpkg.json
tests/: CMakeLists.txt  test_cli_edge_cases.cpp  test_cli_parser.cpp  test_config_validator.cpp  test_file_utils_edge_cases.cpp  test_integration.cpp  test_template_edge_cases.cpp
tests/cli/: CMakeLists.txt  test_refactored_cli.cpp
tests/common/: test_fixtures.cpp  test_fixtures.h  test_helpers.cpp  test_helpers.h
tests/edge_cases/: test_user_experience_edge_cases.cpp
tests/edge_cases/templates/: test_template_edge_cases.cpp
tests/edge_cases/utils/: test_file_utils_edge_cases.cpp
tests/integration/: test_end_to_end.cpp  test_premake_integration.cpp  test_user_experience_integration.cpp  test_xmake_integration.cpp
tests/platform/: test_msys2_integration.cpp
tests/remote_sources/: CMakeLists.txt  test_archive_template.cpp  test_git_repository_template.cpp  test_http_client.cpp
tests/unit/: test_context_sensitive_error_system.cpp  test_enhanced_confirmation_system.cpp  test_operation_rollback_system.cpp  test_table_formatter.cpp
tests/unit/cli/: test_cli_parser.cpp
tests/unit/config/: test_ci_config.cpp  test_config_manager.cpp
tests/unit/documentation/: test_doc_generator.cpp
tests/unit/templates/: test_archive_template.cpp  test_git_repository_template.cpp  test_template_manager.cpp
tests/unit/testing/: test_test_framework_manager.cpp
tests/unit/utils/: test_file_utils.cpp  test_http_client.cpp  test_string_utils.cpp  test_terminal_utils.cpp  test_utf8_encoding.cpp
verify-premake-gameengine/: .gitignore  README.md  premake5.lua  vcpkg.json
verify-xmake-console/: .gitignore  README.md  vcpkg.json  xmake.lua
xmake/: components.lua  config.lua  examples.lua  executable.lua  msys2.lua  options.lua  packages.lua  tasks.lua  tests.lua  utils.lua
(+389 files in other folders)
